Finish card and add basic effect

--- a/src/styles/components/Pill.scss
+++ b/src/styles/components/Pill.scss
@@ -35,4 +35,16 @@
   &--italic {
     font-style: oblique;
   }
+
+  &--full {
+    display: flex;
+    width: 100%;
+
+    .Pill {
+      &-inner {
+        justify-content: center;
+        align-items: center;
+      }
+    }
+  }
 }
