--- a/src/styles/components/index.scss
+++ b/src/styles/components/index.scss
@@ -1,6 +1,9 @@
 @use 'Card';
+@use 'CardFooter';
 @use 'CardHeader';
 @use 'CardPicture';
+@use 'CardPowers';
 @use 'EnergyIcon';
 @use 'HitPoints';
 @use 'Pill';
+@use 'Rhombus';
