--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -7,3 +7,6 @@ $gray-600: #6c757d;
 $gray-700: #495057;
 $gray-800: #343a40;
 $gray-900: #212529;
+
+$lightning: #d0af0a;
+$lightning-gradient: linear-gradient(141deg, rgba(208,175,10,1) 0%, rgba(251,209,0,1) 33%, rgba(208,175,10,1) 66%, rgba(255,226,0,1) 100%);
