--- a/src/styles/components/CardPicture.scss
+++ b/src/styles/components/CardPicture.scss
@@ -8,6 +8,7 @@
   overflow: hidden;
   box-shadow: 0 0 2px 1px rgba(0, 0, 0, 0.2);
   position: relative;
+  margin-bottom: 5%;
 
   &::after {
     content: '';
