--- a/src/styles/components/EnergyIcon.scss
+++ b/src/styles/components/EnergyIcon.scss
@@ -5,6 +5,7 @@
   box-shadow: 0 0 2px 3px rgba(255, 255, 255, 0.5);
   border-radius: 50%;
   position: relative;
+  aspect-ratio: 1 / 1;
 
   &:after {
     content: '';
