--- a/src/styles/components/Card.scss
+++ b/src/styles/components/Card.scss
@@ -5,15 +5,15 @@
   max-width: 100%;
   max-height: 100%;
   border-radius: calc(8.8% / 2) / calc(6.3% / 2);
-  overflow: hidden;
+  // overflow: hidden;
   font-size: 100%;
   position: relative;
   background: rgb(255,255,255);
   background: linear-gradient(141deg, rgba(255,255,255,1) 0%, rgba(207,207,207,1) 33%, rgba(255,255,255,1) 66%, rgba(207,207,207,1) 100%);
   padding: 3%;
   display: flex;
-  transform: rotateX(var(--rx)) rotateY(var(--ry)) scale(1);
-  will-change: transform;
+  perspective: 800px;
+  transform-style: preserve-3d;
 
   &-innerBackground {
     position: absolute;
@@ -38,6 +38,8 @@
     padding: 1% 2.5% 2.5% 2.5%;
     display: flex;
     flex-direction: column;
+    perspective: 800px;
+    transform-style: preserve-3d;
   }
 }
 
