--- a/src/styles/components/CardPicture.scss
+++ b/src/styles/components/CardPicture.scss
@@ -5,10 +5,12 @@
   height: 40%;
   border: 0.3em solid $gray-400;
   border-radius: 1% / 2%;
-  overflow: hidden;
+  // overflow: hidden;
   box-shadow: 0 0 2px 1px rgba(0, 0, 0, 0.2);
   position: relative;
   margin-bottom: 5%;
+  perspective: 800px;
+  transform-style: preserve-3d;
 
   &::after {
     content: '';
@@ -30,5 +32,9 @@
     width: 100%;
     height: 100%;
     object-fit: cover;
+    position: absolute;
+    top: 0;
+    left: 0;
+    transform: translateZ(1em) scale(0.9);
   }
 }
