--- a/src/styles/components/index.scss
+++ b/src/styles/components/index.scss
@@ -1,10 +1,13 @@
 @use 'Card';
+@use 'CardAbility';
 @use 'CardFooter';
 @use 'CardHeader';
 @use 'CardPicture';
 @use 'CardPowers';
 @use 'Display';
 @use 'EnergyIcon';
+@use 'Evolution';
+@use 'ExCard';
 @use 'HitPoints';
 @use 'Pill';
 @use 'Rhombus';
