Add picture input

--- a/src/styles/components/CardPicture.scss
+++ b/src/styles/components/CardPicture.scss
@@ -34,6 +34,6 @@
     position: absolute;
     top: 0;
     left: 0;
-    transform: translateZ(1em) scale(0.9);
+    transform: translateZ(0.75em) translateY(0.5em) scale(0.9);
   }
 }
