--- a/src/styles/components/Card.scss
+++ b/src/styles/components/Card.scss
@@ -143,6 +143,10 @@
     // background-position: center center, 0% var(--posy), var(--posx) var(--posy), var(--posx) var(--posy);
     // filter: brightness(calc((var(--hyp)* 0.3) + 0.5)) contrast(2) saturate(1.5);
   }
+
+  .EnergyIcon {
+    filter: brightness(2) contrast(0.5) saturate(0.5);
+  }
 }
 
 .Card--lightning {
